2006-10-13  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-dcc.c:
	* src/fe-gnome/util.c:
	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/preferences-page-plugins.c:
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/status-bar.c:
	* src/fe-gnome/preferences-page-irc.c:
	* src/fe-gnome/topic-label.c:
	* src/fe-gnome/preferences-page-colors.c:
	* src/fe-gnome/preferences-page-networks.c:
	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/userlist.c:
	* src/fe-gnome/preferences-page-effects.c:
	* src/fe-gnome/setup-dialog.c:
	  - More ws cleanup.

2006-10-12  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	  - Lots of cleanup/ws.

2006-10-11  David Trowbridge  <trowbrds@gmail.com>

	* src/common/outbound.c:
	* src/common/outbound.h:
	* src/common/servlist.c:
	* src/common/dbus/CVS/Entries:
	* src/common/util.c:
	* src/common/cfgfiles.c:
	* src/common/text.c:
	* src/common/dcc.c:
	* src/common/plugin.c:
	* src/common/inbound.c:
	* src/common/fe.h:
	* src/common/server.c:
	* src/common/xchat.c:
	* src/common/notify.c:
	* src/common/CVS/Entries:
	* src/common/xchat.h:
	* src/common/notify.h:
	* src/common/ctcp.c:
	* src/fe-gnome/fe-gnome.c:
	  - Sync from xchat CVS.

2006-10-11  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	  - Fix a crash wrt selections and clipboards. (#361551).  Also remove
	    some unused code paths to begin cleaning up xtext.

2006-10-11  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Fix a possible crash in setting the nickname button. (#361199)

2006-10-10  David Trowbridge  <trowbrds@gmail.com>

	* /src/fe-gnome/palette.c:
	* /fe-gnome/preferences.c:
	* /fe-gnome/conversation-panel.c:
	* /fe-gnome/main-window.c:
	* /fe-gnome/migration.c:
	* /fe-gnome/fe-gnome.c:
	* /fe-gnome/preferences-dialog.c:
	* /fe-gnome/irc-network.c:
	* /fe-gnome/gui.c:
	* /fe-gnome/about.c:
	* /fe-gnome/find-bar.c:
	* /fe-gnome/connect-dialog.c: